# PrecisionLocationalDamage

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: Plugin.h.in
src/: LocationalDamageHandler.cpp  LocationalDamageHandler.h  PCH.h  PrecisionAPI.h  Settings.cpp  logger.h  main.cpp
